ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.3.0-rc0, 7.2.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v7.2, v7.0
    • Sharding EMEA 2023-10-30, CAR Team 2023-11-13
    • 130
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The change in SERVER-80859 made it so that if a StorageUnavailable exception is thrown during restore and the cursor is also EOF, we don't force a yield.

      If the caller performs an update as part of a larger WUOW, we won't bubble up the exception, which would normally rollback the WUOW. The caller can then try to commit, which violates an assertion in WT and crashes the server.

            Assignee:
            Jordi Serra Torrens
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: