SERVER-82361 Do not swallow StorageUnavailable if within a wuow